test/valid/List/List.plume
/**
 * An abstract list. Subclasses shall describe empty and non-empty lists
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: List.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class List extends Object is

  method insert : (i: Integer) -> Node is
    new Node(i, this)
    
  abstract method isEmpty : () -> Boolean
  
  abstract method length : () -> Integer

  // requires 0 <= index && index < length()
  abstract method get : (index: Integer) -> Integer
  
  abstract method contains : (elem: Integer) -> Boolean
    