test/invalid/KeywordsCapitalLetterAbstract/KeywordsCapitalLetterAbstract.plume
/**
 * Keyword com letra maiuscula: abstract
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterAbstract.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 Abstract class KeywordsCapitalLetterAbstract extends Object is

  Abstract method size : () -> Integer